--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Image.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>ARUL MURUGAN</h1>
             <p>AM BCA</p>
         </div>
@@ -170,7 +170,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Resume.PDF target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
