--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="name.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Dhanush D</h1>
+            <img src="Image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Arul Murugan </h1>
             <p>Am Computer Application student</p>
         </div>
     </header>
@@ -162,14 +162,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume1.pdf"class="download-button">Download CV</a>
+            <a href="Resume.pdf"class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 Dhanush D </p>
+        <p>&copy; 2025 Arul Murugan </p>
     </footer>
 
     <script>
